7124354: [macosx] PopipMenuTest is not functional in JCK-runtime-7 interactive Reviewed-by: anthony